--- a/Excersise1/categories.html
+++ b/Excersise1/categories.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- ===== Meta ===== -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>InfoHub | Categories</title>
 
+    <!-- ===== Core CSS ===== -->
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/components.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/layout.css" />
+
+    <!-- ===== Icons ===== -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -17,6 +21,7 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- ===== Fonts ===== -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,12 +29,18 @@
       rel="stylesheet"
     />
   </head>
+
   <body>
+    <!-- ===== Navigation (Injected via shared-layout.js) ===== -->
     <nav id="site-nav"></nav>
 
+    <!-- ===== Page Header / Intro ===== -->
     <header class="intro-container categories">
       <div class="title-container categories">
+        <!-- Page title -->
         <h1>All Course Categories in One Place</h1>
+
+        <!-- Intro text -->
         <p>
           Explore our core Informatics areas—Programming, Web Development,
           Databases, Networks, Cybersecurity, and Artificial Intelligence—and
@@ -37,14 +48,17 @@
         </p>
       </div>
 
+      <!-- ===== Categories Ring Slider ===== -->
       <div class="learning-goals-container">
         <div class="goal-slider" id="categories-header-preview">
-          <!-- goal items gets injected by categories.ui
-         
-           
-          </div>-->
+          <!--
+            Category preview items (.goal-item)
+            are dynamically injected via:
+            assets/js/ui/pages/categories-ui.js
+          -->
         </div>
 
+        <!-- Slider navigation controls -->
         <div class="controll-btn-row">
           <div class="slider-cursor-btn">
             <i class="fa-solid fa-arrow-left"></i>
@@ -57,19 +71,26 @@
       </div>
     </header>
 
+    <!-- ===== Main Categories Content ===== -->
     <main class="categories-main-content" id="categories-full">
-      <!--all available courses description RENDERED FROM JS
-        categories-ui.js
+      <!--
+        Full category sections are rendered dynamically via:
+        assets/js/ui/pages/categories-ui.js
+
+        Each section includes:
+        - Category title & description
+        - Info blocks & tags
+        - Recommended course and books
       -->
     </main>
 
-    <!--Footer -->
+    <!-- ===== Footer (Injected via shared-layout.js) ===== -->
     <footer id="site-footer"></footer>
-    <!--Used scripts-->
+
+    <!-- ===== JavaScript ===== -->
 
     <!-- COMMON UI -->
     <script src="assets/js/ui/common/shared-layout.js"></script>
-
     <script src="assets/js/ui/common/accordion-ui.js"></script>
     <script src="assets/js/ui/common/reveal.js"></script>
 
@@ -78,12 +99,13 @@
     <script src="assets/js/data/courses.js"></script>
     <script src="assets/js/data/books.js"></script>
     <script src="assets/js/data/videos.js"></script>
-    <!-- PAGE UI -->
 
+    <!-- PAGE-SPECIFIC UI -->
     <script src="assets/js/ui/pages/categories-intro-slider.js"></script>
     <script src="assets/js/ui/common/categories-intro-slider-height.js"></script>
     <script src="assets/js/ui/pages/categories-ui.js"></script>
 
+    <!-- APP BOOTSTRAP (must be last) -->
     <script src="assets/js/app.js"></script>
   </body>
 </html>
